@@ -17,8 +17,8 @@ public class Definitions
 	public static final String PIECENAMES[] = {"BK","BQ","BN","BB","BR","BP","WK","WQ","WN","WB","WR","WP"};
 	public static final String RMARKERS[] = {"8","7","6","5","4","3","2","1"};
 	public static final String CMARKERS[] = {"a","b","c","d","e","f","g","h"};
-	public static final int MAXDEPTH = 2; //PLY = 2 * DEPTH
-	public static final double MAXTHINKINGTIME = 10000; //in seconds
+	public static final int MAXDEPTH = 3; //PLY = 2 * DEPTH
+	public static final double MAXTHINKINGTIME = 5; //in seconds
 
 	public static final int repsB[] =
 		{
